modal changed to ngbModal in hub page

--- a/src/app/setting/division/division.component.html
+++ b/src/app/setting/division/division.component.html
@@ -6,7 +6,8 @@
   <h3 class="mb-4 clearfix heading">
     <div class="float-left">
       <div class="dropdown">
-        <div class="curs-ptr dropdown-toggle" id="divisionsDD" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <div class="curs-ptr dropdown-toggle" id="divisionsDD" data-toggle="dropdown" aria-haspopup="true"
+          aria-expanded="false">
           {{selHub && selHub.id?selHub.name:'No Hub'}}
         </div>
         <div class="dropdown-menu" aria-labelledby="divisionsDD">
@@ -25,7 +26,8 @@
     </div>
     <div class="float-right">
       <div class="dropdown">
-        <button class="btn btn-light dropdown-toggle" type="button" id="cogDD" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <button class="btn btn-light dropdown-toggle" type="button" id="cogDD" data-toggle="dropdown"
+          aria-haspopup="true" aria-expanded="false">
           <i class="fa fa-cog"></i>
         </button>
         <div class="dropdown-menu" aria-labelledby="cogDD">
