--- a/src/app/hub/tags/tags.component.html
+++ b/src/app/hub/tags/tags.component.html
@@ -34,10 +34,8 @@
                     <i class="fa fa-ellipsis-h"></i>
                   </div>
                   <div class="dropdown-menu" aria-labelledby="catEllipsis">
-                    <a class="dropdown-item" href="javascript:void(0);" data-toggle="modal"
-                      data-target="#editCategoryModal"><i class="fas fa-edit mr-1"></i>Edit</a>
-                    <a class="dropdown-item" href="javascript:void(0);" (click)="delCatg({})"><i
-                        class="fas fa-trash-alt mr-1"></i>Delete</a>
+                    <a class="dropdown-item" (click)="openModal(addCategory)"><i class="fas fa-edit mr-1"></i>Edit</a>
+                    <a class="dropdown-item" (click)="delCatg({})"><i class="fas fa-trash-alt mr-1"></i>Delete</a>
                   </div>
                 </div>
               </div>
@@ -200,3 +198,30 @@
     </div>
   </div>
 </div>
+
+
+<!-- edit category modal  -->
+<ng-template #addCategory let-modal>
+  <div class="modal-header">
+    <h4 class="modal-title" id="modal-basic-title">Edit Category</h4>
+    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body">
+    <mat-form-field appearance="outline" class="w-100">
+      <mat-label>Name</mat-label>
+      <input matInput type="text" placeholder="Name">
+    </mat-form-field>
+    <mat-label>Published</mat-label>
+    <mat-checkbox class="d-block">Published</mat-checkbox>
+    <p class="text-danger">
+      When published, a tag category becomes available to users for filtering content based on tags (e.g. in
+      advanced search). You can uncheck this option to prevent a tag category can be used for filtering. Tags that
+      are part of an unpublished category will never be shown to users.
+    </p>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-primary" (click)="modal.close('Save click')">Save</button>
+  </div>
+</ng-template>
