--- a/src/styles.scss
+++ b/src/styles.scss
@@ -434,7 +434,11 @@ header {
           border-left: 5px transparent solid;
         }
 
-        a:hover {
+        a.active {
+          color: white !important;
+        }
+
+        a:hover:not(.active) {
           background-color: $hi-dark-grey;
           color: darken($color: $hi-dark, $amount: 15) !important;
         }
