merge, rem unused var and data from hub component

--- a/src/app/user/import/import.component.html
+++ b/src/app/user/import/import.component.html
@@ -38,10 +38,10 @@
     </div>
 
     <div class="mt-5">
-      <button class="btn btn-secondary">Cancel</button>
+      <button class="btn btn-secondary" [routerLink]="'/user'">Cancel</button>
       <div class="float-right">
-        <button class="btn btn-secondary mr-2">Back</button>
-        <button class="btn btn-primary">Import</button>
+        <button class="btn btn-secondary mr-2" [routerLink]="'/user'">Back</button>
+        <button class="btn btn-primary" [routerLink]="'/user'">Import</button>
       </div>
     </div>
   </form>
