--- a/src/app/user/group/group.component.html
+++ b/src/app/user/group/group.component.html
@@ -1,4 +1,8 @@
-<div class="groups-section overflow-hidden">
+<div *ngIf="loading" style="min-height: 70vh; padding-top: 30vh;">
+  <mat-spinner color="accent" class="mx-auto page-spinner"></mat-spinner>
+</div>
+
+<div class="groups-section overflow-hidden" *ngIf="!loading">
   <div class="buttons-row row mt-3 justify-content-between mx-2">
     <!-- Button trigger modal -->
     <button type="button" class="btn btn-primary" (click)="openModal(createNewGroup)">
@@ -102,25 +106,23 @@
                 <tr>
                   <th scope="col" class="curs-ptr">Name<i class="fas fa-sort-down ml-1 align-top"></i>
                   </th>
-                  <th scope="col" class="curs-ptr">Latest Activity<i class="fas fa-sort-down ml-1 align-top"></i>
-                  </th>
-                  <th scope="col" class="curs-ptr">Content Updated<i class="fas fa-sort-down ml-1 align-top"></i></th>
-                  <th scope="col" class="curs-ptr">Role<i class="fas fa-sort-down ml-1 align-top"></i>
-                  </th>
                   <th scope="col" class="curs-ptr">Date Created<i class="fas fa-sort-down ml-1 align-top"></i>
+                  </th>
+                  <th scope="col" class="curs-ptr">Members<i class="fas fa-sort-down ml-1 align-top"></i>
+                  </th>
+                  <th scope="col" class="curs-ptr">Anonymized<i class="fas fa-sort-down ml-1 align-top"></i>
                   </th>
                 </tr>
               </thead>
               <tbody>
-                <tr *ngFor="let d of data" (click)="toggleDoc()">
+                <tr *ngFor="let d of data" (click)="toggleDoc()" [attr.id]="d.id">
                   <td>
-                    {{d.name}}<br />
+                    <span class="d-block">{{d.name}}</span>
                     <small>{{d.email}}</small>
                   </td>
                   <td class="text-hi-dark-grey">{{d.date}}</td>
                   <td>{{d.date}}</td>
                   <td class="text-hi-dark-grey">{{d.role}}</td>
-                  <td>{{d.date2}}</td>
                 </tr>
               </tbody>
             </table>
@@ -268,21 +270,33 @@
       <span aria-hidden="true">&times;</span>
     </button>
   </div>
-  <div class="modal-body">
-    <mat-form-field appearance="outline" class="w-100">
-      <mat-label>Name</mat-label>
-      <input matInput placeholder="Name Group">
-    </mat-form-field>
-    <mat-form-field appearance="outline" class="w-100">
-      <mat-label>Description</mat-label>
-      <textarea matInput placeholder="Type Description"></textarea>
-    </mat-form-field>
-    <mat-form-field appearance="outline" class="w-100">
-      <mat-label>Assign to Divisions</mat-label>
-      <input matInput placeholder="Search Divisions">
-    </mat-form-field>
-  </div>
-  <div class="modal-footer">
-    <button type="button" class="btn btn-primary" (click)="modal.close('Save click')">Save</button>
-  </div>
+  <form name="groupForm" (ngSubmit)="addGroup()" [formGroup]="groupForm" novalidate>
+    <div class="modal-body" ngbAutofocus>
+      <mat-form-field appearance="outline" class="w-100">
+        <mat-label>Name</mat-label>
+        <input matInput placeholder="Name Group" formControlName="name">
+        <mat-error *ngIf="groupForm.get('name')!.hasError('required')">
+          Name is required
+        </mat-error>
+      </mat-form-field>
+      <mat-form-field appearance="outline" class="w-100">
+        <mat-label>Description</mat-label>
+        <textarea matInput placeholder="Type Description"></textarea>
+      </mat-form-field>
+      <mat-form-field appearance="outline" class="w-100">
+        <mat-label>Assign to Divisons</mat-label>
+        <mat-select>
+          <mat-option *ngFor="let div of divArr" [attr.id]="div.id" [value]="div.name">
+            {{div.name}}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+    </div>
+    <div class="modal-footer">
+      <button type="submit" class="btn btn-primary" [disabled]="groupForm!.invalid || disabled">
+        <mat-spinner color="primary" class="mx-auto btn-spinner d-inline-block" *ngIf="disabled"></mat-spinner>
+        Save
+      </button>
+    </div>
+  </form>
 </ng-template>
