--- a/src/app/user/group/group.component.html
+++ b/src/app/user/group/group.component.html
@@ -44,10 +44,8 @@
                   <button class="btn btn-light dropdown-toggle" (click)="toggleDropdown($event)">
                     Division
                   </button>
-                  <div class="dropdown-menu dropdown-menu-right large-dropdown-menu" #divisionDropDown
-                    aria-labelledby="divisionTrigger">
-                    <mat-form-field appearance="outline" class="custom-mat-input w-100 mb-2 px-3"
-                      [floatLabel]="'never'">
+                  <div class="dropdown-menu dropdown-menu-right large-dropdown-menu" #divisionDropDown aria-labelledby="divisionTrigger">
+                    <mat-form-field appearance="outline" class="custom-mat-input w-100 mb-2 px-3" [floatLabel]="'never'">
                       <i matPrefix class="fas fa-search"></i>
                       <input matInput placeholder="Search ...">
                     </mat-form-field>
@@ -71,8 +69,7 @@
                   <button class="btn btn-light dropdown-toggle" (click)="toggleDropdown($event)">
                     Experience
                   </button>
-                  <div class="dropdown-menu dropdown-menu-right large-dropdown-menu" #expDropDown
-                    aria-labelledby="divisionTrigger">
+                  <div class="dropdown-menu dropdown-menu-right large-dropdown-menu" #expDropDown aria-labelledby="divisionTrigger">
                     <div class="input-group mb-2 p-2">
                       <div class="input-group-prepend">
                         <span class="input-group-text bg-white">
@@ -119,14 +116,14 @@
                 </tr>
               </thead>
               <tbody>
-                <tr *ngFor="let d of data" (click)="toggleDoc($event)" [attr.id]="d.id">
+                <tr *ngFor="let grp of grps" (click)="toggleDoc(grp)">
                   <td>
-                    <span class="d-block">{{d.name}}</span>
-                    <small>{{d.email}}</small>
+                    <span class="d-block">{{grp.name}}</span>
+                    <small>St Email</small>
                   </td>
-                  <td class="text-hi-dark-grey">{{d.date}}</td>
-                  <td>{{d.date}}</td>
-                  <td class="text-hi-dark-grey">{{d.role}}</td>
+                  <td class="text-hi-dark-grey">St dae</td>
+                  <td>St dae</td>
+                  <td class="text-hi-dark-grey">Static ROle</td>
                 </tr>
               </tbody>
             </table>
@@ -135,16 +132,14 @@
             <div class="pages">
               <mat-form-field appearance="outline" class="mr-2">
                 <mat-select>
-                  <mat-option value="10">10</mat-option>
-                  <mat-option value="10">20</mat-option>
+                  <mat-option *ngFor="let lP of lmtPage" value="lP">{{lP}}</mat-option>
                 </mat-select>
               </mat-form-field>
               <span>Showing 1-10 of 100 </span>
             </div>
             <ul class="pagination">
               <li class="page-item disabled">
-                <a class="page-link bg-hi-grey" href="javascript:void(0)" tabindex="-1" aria-disabled="true"><i
-                    class="fas fa-chevron-left"></i></a>
+                <a class="page-link bg-hi-grey" href="javascript:void(0)" tabindex="-1" aria-disabled="true"><i class="fas fa-chevron-left"></i></a>
               </li>
               <li class="page-item active"><a class="page-link bg-hi-grey" href="javascript:void(0)">1</a>
               </li>
@@ -162,10 +157,10 @@
       <div *ngIf="docLoading" style="min-height: 50vh; padding-top: 30vh;">
         <mat-spinner color="accent" class="mx-auto page-spinner"></mat-spinner>
       </div>
-      <div class="doc" *ngIf="groupDetail && !docLoading">
+      <div class="doc" *ngIf="grpDetail && !docLoading">
         <div class="card">
           <div class="card-header row m-0">
-            <h5 class="mb-0 pl-0 align-self-center">{{groupDetail.name}}</h5>
+            <h5 class="mb-0 pl-0 align-self-center">{{grpDetail.name}}</h5>
             <div class="ml-auto">
               <div class="btn btn-light" (click)="closeDoc()">
                 <i class="fa fa-times"></i>
@@ -174,7 +169,7 @@
           </div>
           <div class="card-header bg-hi-light-grey p-1 row m-0">
             <button class="btn btn-light">
-              <i class="fa fa-trash"></i>
+              <i class="fa fa-trash" (click)="delGrp();"></i>
             </button>
           </div>
           <div class="card-body">
@@ -183,7 +178,7 @@
               <div class="name">
                 <label class="text-hi-dark-grey mb-0 mt-2">Name</label>
                 <div class="value">
-                  {{groupDetail.name}}
+                  {{grpDetail.name}}
                 </div>
               </div>
               <div class="description">
