--- a/src/app/exp/exp.component.html
+++ b/src/app/exp/exp.component.html
@@ -1,1 +1,105 @@
-<p>exp works!</p>
+<header>
+  <nav class="navbar navbar-expand navbar-light bg-white pl-3">
+    <a class="navbar-brand pr-3 border-right py-2" href="javascript:void(0)"><img src="assets/images/logo.png"
+        alt="Hi Force"></a>
+    <div class="collapse navbar-collapse">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item align-self-center active">
+          <a class="nav-link" href="javascript:void(0)">Resource</a>
+        </li>
+        <li class="nav-item align-self-center">
+          <a class="nav-link" href="javascript:void(0)">Shares</a>
+        </li>
+      </ul>
+      <ul class="navbar-nav toggle-navbar ml-auto">
+        <li class="nav-item align-self-center">
+          <a class="nav-link" href="javascript:void(0)"><i class="fas fa-search align-bottom icon-size"></i></a>
+        </li>
+        <li class="nav-item align-self-center ml-2 dropdown notification">
+          <a class="nav-link" href="javascript:void(0)" id="notificatioDD" data-toggle="dropdown" aria-expanded="false">
+            <i class="fas fa-bell align-bottom icon-size"></i>
+          </a>
+          <div class="dropdown-menu large-dropdown dropdown-menu-right" aria-labelledby="notificatioDD">
+            <h5 class="dropdown-item text-dark font-weight-bold no-bg-hover">Notifications<small
+                class="badge badge-danger float-right">8</small></h5>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item row m-0 mt-2" href="javascript:void(0)">
+              <div class="col-3 align-self-center"><img src="assets/images/avatar.png" class="w-100"></div>
+              <div class="col-9 align-self-center row">
+                <div>
+                  <div class="name">Regina Cooper</div>
+                  <div class="time-active text-hi-dark-grey"><small>1 min ago</small></div>
+                </div>
+                <div class="ml-auto align-self-center">
+                  <i class="fas fa-times p-1"></i>
+                </div>
+              </div>
+            </a>
+            <a class="dropdown-item row m-0 mt-2" href="javascript:void(0)">
+              <div class="col-3 align-self-center"><img src="assets/images/avatar.png" class="w-100"></div>
+              <div class="col-9 align-self-center row">
+                <div>
+                  <div class="name">Regina Cooper</div>
+                  <div class="time-active text-hi-dark-grey"><small>1 min ago</small></div>
+                </div>
+                <div class="ml-auto align-self-center">
+                  <i class="fas fa-times p-1"></i>
+                </div>
+              </div>
+            </a>
+          </div>
+        </li>
+        <li class="nav-item align-self-center dropdown ml-4 user">
+          <a class="nav-link dropdown-toggle" href="javascript:void(0)" id="userDropdown" role="button"
+            data-toggle="dropdown" aria-expanded="false">
+            <img src="assets/images/avatar.png"><span class="align-middle">
+              User Name</span>
+          </a>
+          <div class="dropdown-menu large-dropdown dropdown-menu-right" aria-labelledby="userDropdown">
+            <h6 class="dropdown-item row m-0 p-2 mt-2 no-bg-hover text-dark">
+              <div class="col-3"><img src="assets/images/avatar.png" class="w-100"></div>
+              <div class="col-9 align-self-center row">
+                <div>
+                  <div class="username">User Name</div>
+                  <div class="position text-hi-grey"><small>Manager</small></div>
+                </div>
+                <div class="ml-auto align-self-center">
+                  <span class="badge badge-danger">8</span>
+                </div>
+              </div>
+            </h6>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item"><i class="fas fa-user mr-2"></i>My Profile</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="javascript:void(0)"><i class="fas fa-briefcase mr-2"></i>Switch to web
+              app</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="javascript:void(0)"><i class="fas fa-sign-out-alt mr-2"></i>Logout</a>
+          </div>
+        </li>
+      </ul>
+    </div>
+  </nav>
+  <div class="navbar-light toggle-navbar-bottom">
+    <ul class="navbar-nav toggle-navbar-bottom-nav list-unstyled justify-content-end mb-0 bg-white"></ul>
+  </div>
+</header>
+
+<!-- main -->
+<div class="main main-employee p-3 container mt-3">
+  <h3 class="mb-4 clearfix heading">
+    All Workspaces (5)
+  </h3>
+  <div class="mt-2 row workspaces">
+    <div class="card-container col-lg-3 col-md-4 col-sm-6 my-3 mx-auto" *ngFor="let t of temp;">
+      <div class="card overflow-hidden">
+        <div class="card-body" style="background-image: url(assets/images/bg.jpg);">
+          <img src="assets/images/logo.png" class="icon">
+        </div>
+        <div class="card-footer pt-4">
+          English
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
