--- a/src/app/collection/collection.component.html
+++ b/src/app/collection/collection.component.html
@@ -1,1 +1,217 @@
-<p>collection works!</p>
+<!-- main -->
+<div class="main main-employee p-3 container mt-3">
+  <h3 class="mb-4 clearfix heading align-self-center">
+    Collections
+    <div class="float-right">
+      <i class="fa mr-3 curs-ptr {{view? 'fa-list-ul' : 'fa-th-large'}}" (click)="switchView()"></i>
+      <button class="btn btn-primary mb-2" (click)="openModal(newCollection)">New Collection</button>
+    </div>
+  </h3>
+  <div class="text-right">
+    Sort by:
+    <span class="text-primary mr-2 curs-ptr">Name <i class="fa fa-sort-down align-top"></i></span>
+    <span class="text-primary curs-ptr">Date Modified <i class="fa fa-sort-down align-top"></i></span>
+  </div>
+  <div class="mt-2 row collections">
+    <div class="card-container col-lg-3 col-md-4 col-sm-6 my-3 mx-auto mx-sm-0" *ngFor="let t of testArr">
+      <div class="card curs-ptr">
+        <div class="card-body">
+          <div class="imagePreview text-center">
+            <img src="assets/images/discription.png">
+          </div>
+          <div class="options rounded">
+            <div class="dropleft">
+              <button class="btn" type="button" id="shareDD" data-toggle="dropdown" aria-haspopup="true"
+                aria-expanded="false">
+                <i class="fas fa-share-square"></i>
+              </button>
+              <div class="dropdown-menu mr-2" aria-labelledby="shareDD">
+                <a class="dropdown-item" (click)="openLgModal(email)"><i class="fa fa-envelope mr-1"></i>Email</a>
+                <a class="dropdown-item" (click)="openModal(getLink)"><i class="fa fa-link mr-1"></i>Get a link</a>
+              </div>
+            </div>
+            <div class="btn my-1">
+              <i class="fas fa-trash-alt"></i>
+            </div>
+            <div class="dropleft">
+              <button class="btn" type="button" id="optionsDD" data-toggle="dropdown" aria-haspopup="true"
+                aria-expanded="false">
+                <i class="fas fa-ellipsis-h"></i>
+              </button>
+              <div class="dropdown-menu" aria-labelledby="optionsDD">
+                <a class="dropdown-item" (click)="openModal(duplicate)"><i class="fas fa-copy mr-1"></i>Duplicate</a>
+                <a class="dropdown-item" (click)="openModal(rename)"><i class="fas fa-edit mr-1"></i>Rename</a>
+                <a class="dropdown-item dd">
+                  <i class="fa fa-download mr-1"></i>Download
+                  <div class="dropdown-menu">
+                    <a class="dropdown-item"><i class="fas fa-file-pdf mr-1"></i>As a single PDF</a>
+                    <a class="dropdown-item"><i class="fas fa-file-alt mr-1"></i>As separate items</a>
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="card-footer">
+          <div class="name">Test</div>
+          <div class="float-left text-secondary d-flex">
+            <div class="date">Oct 10, 2020</div>
+            <div class="mx-2">l</div>
+            <div class="items">3 Items</div>
+          </div>
+          <div class="float-right">
+            <mat-checkbox></mat-checkbox>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- fixed div on selecting a collection -->
+<div class="row mx-auto fixed-bottom px-3" style="width: 90%; background-color: #fff; height: 50px;">
+  <div class="selected-items text-secondary align-self-center">1 item selected</div>
+  <div class="mr-1 ml-3 align-self-center">|</div>
+  <div class="btn btn-outline-primary border-0 align-self-center">Clear</div>
+  <div class="btn btn-light align-self-center ml-auto bg-white" (click)="openLgModal(email)"><i
+      class="fa fa-envelope mr-1"></i>Email</div>
+  <div class="btn btn-light align-self-center bg-white" (click)="openModal(getLink)"><i class="fa fa-link mr-1"></i> a
+    link</div>
+  <div class="btn btn-primary align-self-center"><i class="fas fa-trash-alt mr-1"></i> Delete</div>
+</div>
+
+<!-- new collection modal -->
+<ng-template #newCollection let-modal>
+  <div class="modal-header">
+    <h4 class="modal-title" id="modal-basic-title">Create a Collection</h4>
+    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body" ngbAutofocus>
+    <mat-form-field appearance="outline" class="w-100">
+      <mat-label>Name</mat-label>
+      <input matInput type="text" placeholder="New Collection Name">
+    </mat-form-field>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-primary" (click)="modal.close('Save click')">Save</button>
+  </div>
+</ng-template>
+
+<!-- email modal -->
+<ng-template #email let-modal>
+  <div class="modal-header">
+    <h4 class="modal-title" id="modal-basic-title">Email</h4>
+    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body" ngbAutofocus>
+    <div class="row">
+      <div class="col-9 border-right">
+        <mat-form-field appearance="outline" class="w-100">
+          <mat-label>To</mat-label>
+          <input matInput type="text" placeholder="Recipients">
+        </mat-form-field>
+        <mat-form-field appearance="outline" class="w-100">
+          <mat-label>Subject</mat-label>
+          <input matInput type="text" placeholder="Subject">
+        </mat-form-field>
+        <div class="row">
+          <mat-form-field appearance="outline" class="col-8">
+            <mat-label>Message</mat-label>
+            <input matInput type="text" placeholder="Search Content">
+          </mat-form-field>
+          <div class="col-4 mt-3">
+            <div class="btn btn-primary">
+              <i class="fas fa-file-medical mr-1"></i>Add resource
+            </div>
+          </div>
+        </div>
+        <mat-form-field appearance="outline" class="w-100">
+          <textarea matInput type="text" placeholder=""></textarea>
+        </mat-form-field>
+      </div>
+      <div class="col-3">
+        <h5>Sharing Settings</h5>
+        <mat-checkbox class="ml-2">Allow downloads</mat-checkbox>
+        <mat-checkbox class="ml-2">Send me a copy</mat-checkbox>
+      </div>
+    </div>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-primary" (click)="modal.close('Save click')">Save</button>
+  </div>
+</ng-template>
+
+<!-- get a link modal -->
+<ng-template #getLink let-modal>
+  <div class="modal-header">
+    <h4 class="modal-title" id="modal-basic-title">Get a Link</h4>
+    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body" ngbAutofocus>
+    <mat-form-field appearance="outline" class="w-100">
+      <mat-label>Name</mat-label>
+      <input type="text" matInput placeholder="Name">
+    </mat-form-field>
+    <mat-checkbox>Allow downloads</mat-checkbox>
+    <mat-label class="d-block mt-3">Content</mat-label>
+    <div class="row">
+      <div class="col-9">
+        <mat-form-field appearance="outline" class="w-100 search">
+          <mat-label class="ml-2">Search for content</mat-label>
+          <input class="ml-2" type="text" matInput placeholder="Search for content">
+          <i class="fa fa-search text-secondary" matPrefix style="font-size: 18px;"></i>
+        </mat-form-field>
+      </div>
+      <div class="col-3 mt-3">
+        <div class="btn btn-primary">Browse</div>
+      </div>
+    </div>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-primary" (click)="modal.close('Save click')">Save</button>
+  </div>
+</ng-template>
+
+<!-- duplicate collection modal -->
+<ng-template #duplicate let-modal>
+  <div class="modal-header">
+    <h4 class="modal-title" id="modal-basic-title">Duplicate Collection</h4>
+    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body" ngbAutofocus>
+    <mat-form-field appearance="outline" class="w-100">
+      <mat-label>Collection Name</mat-label>
+      <input type="text" matInput placeholder="Collection Name">
+    </mat-form-field>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-primary" (click)="modal.close('Save click')">Save</button>
+  </div>
+</ng-template>
+
+<!-- rename collection modal -->
+<ng-template #rename let-modal>
+  <div class="modal-header">
+    <h4 class="modal-title" id="modal-basic-title">Rename Collection</h4>
+    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body" ngbAutofocus>
+    <mat-form-field appearance="outline" class="w-100">
+      <mat-label>Collection Name</mat-label>
+      <input type="text" matInput placeholder="Collection Name">
+    </mat-form-field>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-primary" (click)="modal.close('Save click')">Save</button>
+  </div>
+</ng-template>
