--- a/src/app/exp/exp.component.html
+++ b/src/app/exp/exp.component.html
@@ -91,7 +91,7 @@
     All Workspaces (5)
   </h3>
   <div class="mt-2 row workspaces">
-    <div class="card-container col-lg-3 col-md-4 col-sm-6 my-3 mx-auto" *ngFor="let t of temp;">
+    <div class="card-container curs-ptr col-lg-3 col-md-4 col-sm-6 my-3 mx-auto mx-sm-0" *ngFor="let t of temp;">
       <div class="card overflow-hidden">
         <div class="card-body" style="background-image: url(assets/images/bg.jpg);">
           <img src="assets/images/logo.png" class="icon">
