--- a/src/app/collection/collection.component.html
+++ b/src/app/collection/collection.component.html
@@ -3,16 +3,17 @@
   <h3 class="mb-4 clearfix heading align-self-center">
     Collections
     <div class="float-right">
-      <i class="fa mr-3 curs-ptr {{view? 'fa-list-ul' : 'fa-th-large'}}" (click)="switchView()"></i>
+      <i class="fa mr-3 curs-ptr {{view? 'fa-list-ul' : 'fa-th-large'}}" (click)="switchView()"
+        matTooltip="{{view? 'List View' : 'Grid View'}}"></i>
       <button class="btn btn-primary mb-2" (click)="openModal(newCollection)">New Collection</button>
     </div>
   </h3>
-  <div class="text-right">
+  <div class="text-right" *ngIf="view">
     Sort by:
-    <span class="text-primary mr-2 curs-ptr">Name <i class="fa fa-sort-down align-top"></i></span>
-    <span class="text-primary curs-ptr">Date Modified <i class="fa fa-sort-down align-top"></i></span>
+    <span class="text-primary mr-2 curs-ptr">Name<i class="fa fa-sort-down align-top ml-1"></i></span>
+    <span class="text-primary curs-ptr">Date Modified<i class="fa fa-sort-down align-top ml-1"></i></span>
   </div>
-  <div class="mt-2 row collections">
+  <div class="mt-2 row collections" *ngIf="view">
     <div class="card-container col-lg-3 col-md-4 col-sm-6 my-3 mx-auto mx-sm-0" *ngFor="let t of testArr">
       <div class="card curs-ptr">
         <div class="card-body">
@@ -25,7 +26,7 @@
                 aria-expanded="false">
                 <i class="fas fa-share-square"></i>
               </button>
-              <div class="dropdown-menu mr-2" aria-labelledby="shareDD">
+              <div class="dropdown-menu" aria-labelledby="shareDD">
                 <a class="dropdown-item" (click)="openLgModal(email)"><i class="fa fa-envelope mr-1"></i>Email</a>
                 <a class="dropdown-item" (click)="openModal(getLink)"><i class="fa fa-link mr-1"></i>Get a link</a>
               </div>
@@ -66,6 +67,70 @@
       </div>
     </div>
   </div>
+  <div class="mt-2 row collections" *ngIf="!view">
+    <table class="table table-hover">
+      <thead>
+        <tr>
+          <th>
+            <mat-checkbox></mat-checkbox>
+          </th>
+          <th>Name<i class="fas fa-sort-down ml-1 align-top"></i></th>
+          <th>Date Modified<i class="fas fa-sort-down ml-1 align-top"></i></th>
+          <th></th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let t of testArr">
+          <td class="align-middle">
+            <mat-checkbox></mat-checkbox>
+          </td>
+          <td class="align-middle">
+            <div class="d-flex">
+              <div class="imagePreview border mr-2">
+                <img src="assets/images/discription.png">
+              </div>
+              <div class="name align-self-center">Abc def</div>
+            </div>
+          </td>
+          <td class="align-middle">16 Oct, 2020 14:40</td>
+          <td class="align-middle options">
+            <div class="d-flex">
+              <div class="dropleft">
+                <button class="btn" type="button" id="shareDD" data-toggle="dropdown" aria-haspopup="true"
+                  aria-expanded="false">
+                  <i class="fas fa-share-square"></i>
+                </button>
+                <div class="dropdown-menu" aria-labelledby="shareDD">
+                  <a class="dropdown-item" (click)="openLgModal(email)"><i class="fa fa-envelope mr-1"></i>Email</a>
+                  <a class="dropdown-item" (click)="openModal(getLink)"><i class="fa fa-link mr-1"></i>Get a link</a>
+                </div>
+              </div>
+              <div class="btn">
+                <i class="fas fa-trash-alt"></i>
+              </div>
+              <div class="dropleft">
+                <button class="btn" type="button" id="optionsDD" data-toggle="dropdown" aria-haspopup="true"
+                  aria-expanded="false">
+                  <i class="fas fa-ellipsis-h"></i>
+                </button>
+                <div class="dropdown-menu" aria-labelledby="optionsDD">
+                  <a class="dropdown-item" (click)="openModal(duplicate)"><i class="fas fa-copy mr-1"></i>Duplicate</a>
+                  <a class="dropdown-item" (click)="openModal(rename)"><i class="fas fa-edit mr-1"></i>Rename</a>
+                  <a class="dropdown-item dd">
+                    <i class="fa fa-download mr-1"></i>Download
+                    <div class="dropdown-menu">
+                      <a class="dropdown-item"><i class="fas fa-file-pdf mr-1"></i>As a single PDF</a>
+                      <a class="dropdown-item"><i class="fas fa-file-alt mr-1"></i>As separate items</a>
+                    </div>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
 </div>
 
 <!-- fixed div on selecting a collection -->
@@ -77,7 +142,7 @@
       class="fa fa-envelope mr-1"></i>Email</div>
   <div class="btn btn-light align-self-center bg-white" (click)="openModal(getLink)"><i class="fa fa-link mr-1"></i> a
     link</div>
-  <div class="btn btn-primary align-self-center"><i class="fas fa-trash-alt mr-1"></i> Delete</div>
+  <div class="btn btn-primary align-self-center"><i class="fas fa-trash-alt mr-1"></i>Delete</div>
 </div>
 
 <!-- new collection modal -->
