--- a/src/app/files/files.component.html
+++ b/src/app/files/files.component.html
@@ -1,1 +1,315 @@
-<p>files works!</p>
+<div class="main main-employee">
+  <div class="row mt-3 mx-0">
+    <!-- side -->
+    <div class="side col-sm-2 files-side">
+      <ul class="list-unstyled mt-5">
+        <li class="pr-2 pl-3 rounded py-2 curs-ptr active"><i class="fas fa-folder mr-1"></i>My Files</li>
+        <hr>
+        <li class="pr-2 pl-3 rounded py-2 curs-ptr"><i class="fas fa-user-friends mr-1"></i>Shared with me</li>
+        <hr>
+        <li class="pr-2 pl-3 rounded py-2 curs-ptr"><i class="fas fa-clock mr-1"></i>Recent</li>
+      </ul>
+      <hr>
+      <div class="storage">
+        <div class="text-secondary text-center">
+          3.3 MB of 2 GB used
+          <div class="progress mt-2" style="height:10px;">
+            <div class="progress-bar" role="progressbar" style="width: 1%;" aria-valuenow="3" aria-valuemin="0"
+              aria-valuemax="2048"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- main -->
+    <div class="col-sm-10">
+      <h3 class="mb-4 clearfix heading align-self-center">
+        My Files
+        <div class="float-right">
+          <i class="fa mr-3 curs-ptr {{view? 'fa-list-ul' : 'fa-th-large'}}" (click)="switchView()"
+            matTooltip="{{view? 'List View' : 'Grid View'}}"></i>
+          <button class="btn btn-primary mb-2" (click)="openModal(newCollection)">New Collection</button>
+        </div>
+      </h3>
+      <div class="text-right" *ngIf="view">
+        Sort by:
+        <span class="text-primary mr-2 curs-ptr">Name<i class="fa fa-sort-down align-top ml-1"></i></span>
+        <span class="text-primary curs-ptr">Date Modified<i class="fa fa-sort-down align-top ml-1"></i></span>
+      </div>
+      <div class="mt-2 row my-files" *ngIf="view">
+        <div class="card-container col-lg-3 col-md-4 col-sm-6 my-3 mx-auto mx-sm-0" *ngFor="let t of testArr">
+          <div class="card curs-ptr">
+            <div class="card-body">
+              <div class="imagePreview text-center">
+                <img src="assets/images/discription.png">
+              </div>
+              <div class="options rounded">
+                <div class="dropleft">
+                  <button class="btn" type="button" id="shareDD" data-toggle="dropdown" aria-haspopup="true"
+                    aria-expanded="false">
+                    <i class="fas fa-share-square"></i>
+                  </button>
+                  <div class="dropdown-menu" aria-labelledby="shareDD">
+                    <h6 class="ml-2 text-white-50">External Sharing</h6>
+                    <a class="dropdown-item" (click)="openLgModal(email)"><i class="fa fa-envelope mr-1"></i>Email</a>
+                    <a class="dropdown-item" (click)="openModal(getLink)"><i class="fa fa-link mr-1"></i>Get a link</a>
+                    <div class="dropdown-divider"></div>
+                    <h6 class="ml-2 text-white-50">Internal Sharing</h6>
+                    <a class="dropdown-item"><i class="fa fa-user-friends mr-1"></i>Share with
+                      colleagues</a>
+                  </div>
+                </div>
+                <div class="btn my-1">
+                  <i class="fas fa-trash-alt"></i>
+                </div>
+                <div class="dropleft">
+                  <button class="btn" type="button" id="optionsDD" data-toggle="dropdown" aria-haspopup="true"
+                    aria-expanded="false">
+                    <i class="fas fa-ellipsis-h"></i>
+                  </button>
+                  <div class="dropdown-menu" aria-labelledby="optionsDD">
+                    <a class="dropdown-item" (click)="openModal(duplicate)"><i
+                        class="fas fa-copy mr-1"></i>Duplicate</a>
+                    <a class="dropdown-item" (click)="openModal(rename)"><i class="fas fa-edit mr-1"></i>Rename</a>
+                    <a class="dropdown-item dd">
+                      <i class="fa fa-download mr-1"></i>Download
+                      <div class="dropdown-menu">
+                        <a class="dropdown-item"><i class="fas fa-file-pdf mr-1"></i>As a single PDF</a>
+                        <a class="dropdown-item"><i class="fas fa-file-alt mr-1"></i>As separate items</a>
+                      </div>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="card-footer">
+              <div class="name">Test</div>
+              <div class="float-left text-secondary d-flex">
+                <div class="date">Oct 10, 2020</div>
+                <div class="mx-2">l</div>
+                <div class="items">3 Items</div>
+              </div>
+              <div class="float-right">
+                <mat-checkbox></mat-checkbox>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="mt-2 row my-files" *ngIf="!view">
+        <table class="table table-hover">
+          <thead>
+            <tr>
+              <th>
+                <mat-checkbox></mat-checkbox>
+              </th>
+              <th>Name<i class="fas fa-sort-down ml-1 align-top"></i></th>
+              <th>Date Modified<i class="fas fa-sort-down ml-1 align-top"></i></th>
+              <th></th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let t of testArr">
+              <td class="align-middle">
+                <mat-checkbox></mat-checkbox>
+              </td>
+              <td class="align-middle">
+                <div class="d-flex">
+                  <div class="imagePreview border mr-2">
+                    <img src="assets/images/discription.png">
+                  </div>
+                  <div class="name align-self-center">Abc def</div>
+                </div>
+              </td>
+              <td class="align-middle">16 Oct, 2020 14:40</td>
+              <td class="align-middle options">
+                <div class="d-flex">
+                  <div class="dropleft">
+                    <button class="btn" type="button" id="shareDD" data-toggle="dropdown" aria-haspopup="true"
+                      aria-expanded="false">
+                      <i class="fas fa-share-square"></i>
+                    </button>
+                    <div class="dropdown-menu" aria-labelledby="shareDD">
+                      <a class="dropdown-item" (click)="openLgModal(email)"><i class="fa fa-envelope mr-1"></i>Email</a>
+                      <a class="dropdown-item" (click)="openModal(getLink)"><i class="fa fa-link mr-1"></i>Get a
+                        link</a>
+                    </div>
+                  </div>
+                  <div class="btn">
+                    <i class="fas fa-trash-alt"></i>
+                  </div>
+                  <div class="dropleft">
+                    <button class="btn" type="button" id="optionsDD" data-toggle="dropdown" aria-haspopup="true"
+                      aria-expanded="false">
+                      <i class="fas fa-ellipsis-h"></i>
+                    </button>
+                    <div class="dropdown-menu" aria-labelledby="optionsDD">
+                      <a class="dropdown-item" (click)="openModal(duplicate)"><i
+                          class="fas fa-copy mr-1"></i>Duplicate</a>
+                      <a class="dropdown-item" (click)="openModal(rename)"><i class="fas fa-edit mr-1"></i>Rename</a>
+                      <a class="dropdown-item dd">
+                        <i class="fa fa-download mr-1"></i>Download
+                        <div class="dropdown-menu">
+                          <a class="dropdown-item"><i class="fas fa-file-pdf mr-1"></i>As a single PDF</a>
+                          <a class="dropdown-item"><i class="fas fa-file-alt mr-1"></i>As separate items</a>
+                        </div>
+                      </a>
+                    </div>
+                  </div>
+                </div>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
+
+</div>
+
+<!-- fixed div on selecting a collection -->
+<div class="row mx-auto fixed-bottom px-3" style="width: 90%; background-color: #fff; height: 50px;">
+  <div class="selected-items text-secondary align-self-center">1 item selected</div>
+  <div class="mr-1 ml-3 align-self-center">|</div>
+  <div class="btn btn-outline-primary border-0 align-self-center">Clear</div>
+  <div class="btn btn-light align-self-center ml-auto bg-white" (click)="openLgModal(email)"><i
+      class="fa fa-envelope mr-1"></i>Email</div>
+  <div class="btn btn-light align-self-center bg-white" (click)="openModal(getLink)"><i class="fa fa-link mr-1"></i> a
+    link</div>
+  <div class="btn btn-primary align-self-center"><i class="fas fa-trash-alt mr-1"></i>Delete</div>
+</div>
+
+<!-- new collection modal -->
+<ng-template #newCollection let-modal>
+  <div class="modal-header">
+    <h4 class="modal-title" id="modal-basic-title">Create a Collection</h4>
+    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body" ngbAutofocus>
+    <mat-form-field appearance="outline" class="w-100">
+      <mat-label>Name</mat-label>
+      <input matInput type="text" placeholder="New Collection Name">
+    </mat-form-field>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-primary" (click)="modal.close('Save click')">Save</button>
+  </div>
+</ng-template>
+
+<!-- email modal -->
+<ng-template #email let-modal>
+  <div class="modal-header">
+    <h4 class="modal-title" id="modal-basic-title">Email</h4>
+    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body" ngbAutofocus>
+    <div class="row">
+      <div class="col-9 border-right">
+        <mat-form-field appearance="outline" class="w-100">
+          <mat-label>To</mat-label>
+          <input matInput type="text" placeholder="Recipients">
+        </mat-form-field>
+        <mat-form-field appearance="outline" class="w-100">
+          <mat-label>Subject</mat-label>
+          <input matInput type="text" placeholder="Subject">
+        </mat-form-field>
+        <div class="row">
+          <mat-form-field appearance="outline" class="col-8">
+            <mat-label>Message</mat-label>
+            <input matInput type="text" placeholder="Search Content">
+          </mat-form-field>
+          <div class="col-4 mt-3">
+            <div class="btn btn-primary">
+              <i class="fas fa-file-medical mr-1"></i>Add resource
+            </div>
+          </div>
+        </div>
+        <mat-form-field appearance="outline" class="w-100">
+          <textarea matInput type="text" placeholder=""></textarea>
+        </mat-form-field>
+      </div>
+      <div class="col-3">
+        <h5>Sharing Settings</h5>
+        <mat-checkbox class="ml-2">Allow downloads</mat-checkbox>
+        <mat-checkbox class="ml-2">Send me a copy</mat-checkbox>
+      </div>
+    </div>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-primary" (click)="modal.close('Save click')">Save</button>
+  </div>
+</ng-template>
+
+<!-- get a link modal -->
+<ng-template #getLink let-modal>
+  <div class="modal-header">
+    <h4 class="modal-title" id="modal-basic-title">Get a Link</h4>
+    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body" ngbAutofocus>
+    <mat-form-field appearance="outline" class="w-100">
+      <mat-label>Name</mat-label>
+      <input type="text" matInput placeholder="Name">
+    </mat-form-field>
+    <mat-checkbox>Allow downloads</mat-checkbox>
+    <mat-label class="d-block mt-3">Content</mat-label>
+    <div class="row">
+      <div class="col-9">
+        <mat-form-field appearance="outline" class="w-100 search">
+          <mat-label class="ml-2">Search for content</mat-label>
+          <input class="ml-2" type="text" matInput placeholder="Search for content">
+          <i class="fa fa-search text-secondary" matPrefix style="font-size: 18px;"></i>
+        </mat-form-field>
+      </div>
+      <div class="col-3 mt-3">
+        <div class="btn btn-primary">Browse</div>
+      </div>
+    </div>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-primary" (click)="modal.close('Save click')">Save</button>
+  </div>
+</ng-template>
+
+<!-- duplicate collection modal -->
+<ng-template #duplicate let-modal>
+  <div class="modal-header">
+    <h4 class="modal-title" id="modal-basic-title">Duplicate Collection</h4>
+    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body" ngbAutofocus>
+    <mat-form-field appearance="outline" class="w-100">
+      <mat-label>Collection Name</mat-label>
+      <input type="text" matInput placeholder="Collection Name">
+    </mat-form-field>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-primary" (click)="modal.close('Save click')">Save</button>
+  </div>
+</ng-template>
+
+<!-- rename collection modal -->
+<ng-template #rename let-modal>
+  <div class="modal-header">
+    <h4 class="modal-title" id="modal-basic-title">Rename Collection</h4>
+    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body" ngbAutofocus>
+    <mat-form-field appearance="outline" class="w-100">
+      <mat-label>Collection Name</mat-label>
+      <input type="text" matInput placeholder="Collection Name">
+    </mat-form-field>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-primary" (click)="modal.close('Save click')">Save</button>
+  </div>
+</ng-template>
