my-files page done

--- a/src/app/collection/collection.component.html
+++ b/src/app/collection/collection.component.html
@@ -3,8 +3,8 @@
   <h3 class="mb-4 clearfix heading align-self-center">
     Collections
     <div class="float-right">
-      <i class="fa mr-3 curs-ptr {{view? 'fa-list-ul' : 'fa-th-large'}}" (click)="switchView()"
-        matTooltip="{{view? 'List View' : 'Grid View'}}"></i>
+      <i [ngClass]="{'fa mr-3 curs-ptr align-self-center': true, 'fa-list-ul': view, 'fa-th-large': !view}"
+        (click)="switchView()" matTooltip="{{view? 'List View' : 'Grid View'}}"></i>
       <button class="btn btn-primary mb-2" (click)="openModal(newCollection)">New Collection</button>
     </div>
   </h3>
