--- a/src/app/files/files.component.html
+++ b/src/app/files/files.component.html
@@ -24,10 +24,26 @@
     <div class="col-sm-10">
       <h3 class="mb-4 clearfix heading align-self-center">
         My Files
-        <div class="float-right">
-          <i class="fa mr-3 curs-ptr {{view? 'fa-list-ul' : 'fa-th-large'}}" (click)="switchView()"
-            matTooltip="{{view? 'List View' : 'Grid View'}}"></i>
-          <button class="btn btn-primary mb-2" (click)="openModal(newCollection)">New Collection</button>
+        <div class="float-right d-flex">
+          <i [ngClass]="{'fa mr-3 curs-ptr align-self-center': true, 'fa-list-ul': view, 'fa-th-large': !view}"
+            (click)="switchView()" matTooltip="{{view? 'List View' : 'Grid View'}}"></i>
+          <div class="dropdown">
+            <button class="btn btn-primary dropdown-toggle" type="button" id="addBtnDD" data-toggle="dropdown"
+              aria-haspopup="true" aria-expanded="false">
+              Add
+            </button>
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="addBtnDD">
+              <a class="dropdown-item curs-ptr" (click)="openModal(addFolder)"><i class="fas fa-folder-plus mr-1"></i>
+                Create
+                Folder</a>
+              <a class="dropdown-item curs-ptr" (click)="openModal(addURL)"><i class="fa fa-link mr-1"></i>Add URL</a>
+              <a class="dropdown-item curs-ptr" (click)="uploadBtn(uploadFile)"><i class="fa fa-upload mr-1"></i>Upload
+                from hard
+                drive
+                <input type="file" style="display: none;" #uploadFile>
+              </a>
+            </div>
+          </div>
         </div>
       </h3>
       <div class="text-right" *ngIf="view">
@@ -54,30 +70,16 @@
                     <a class="dropdown-item" (click)="openModal(getLink)"><i class="fa fa-link mr-1"></i>Get a link</a>
                     <div class="dropdown-divider"></div>
                     <h6 class="ml-2 text-white-50">Internal Sharing</h6>
-                    <a class="dropdown-item"><i class="fa fa-user-friends mr-1"></i>Share with
+                    <a class="dropdown-item" (click)="openModal(shareColl)"><i class="fa fa-user-friends mr-1"></i>Share
+                      with
                       colleagues</a>
                   </div>
                 </div>
-                <div class="btn my-1">
-                  <i class="fas fa-trash-alt"></i>
+                <div class="btn my-1" (click)="openModal(addtoCollection)">
+                  <i class="fas fa-folder-plus"></i>
                 </div>
-                <div class="dropleft">
-                  <button class="btn" type="button" id="optionsDD" data-toggle="dropdown" aria-haspopup="true"
-                    aria-expanded="false">
-                    <i class="fas fa-ellipsis-h"></i>
-                  </button>
-                  <div class="dropdown-menu" aria-labelledby="optionsDD">
-                    <a class="dropdown-item" (click)="openModal(duplicate)"><i
-                        class="fas fa-copy mr-1"></i>Duplicate</a>
-                    <a class="dropdown-item" (click)="openModal(rename)"><i class="fas fa-edit mr-1"></i>Rename</a>
-                    <a class="dropdown-item dd">
-                      <i class="fa fa-download mr-1"></i>Download
-                      <div class="dropdown-menu">
-                        <a class="dropdown-item"><i class="fas fa-file-pdf mr-1"></i>As a single PDF</a>
-                        <a class="dropdown-item"><i class="fas fa-file-alt mr-1"></i>As separate items</a>
-                      </div>
-                    </a>
-                  </div>
+                <div class="btn">
+                  <i class="fas fa-trash-alt"></i>
                 </div>
               </div>
             </div>
@@ -134,26 +136,11 @@
                         link</a>
                     </div>
                   </div>
+                  <div class="btn" (click)="openModal(addtoCollection)">
+                    <i class="fas fa-folder-plus"></i>
+                  </div>
                   <div class="btn">
                     <i class="fas fa-trash-alt"></i>
-                  </div>
-                  <div class="dropleft">
-                    <button class="btn" type="button" id="optionsDD" data-toggle="dropdown" aria-haspopup="true"
-                      aria-expanded="false">
-                      <i class="fas fa-ellipsis-h"></i>
-                    </button>
-                    <div class="dropdown-menu" aria-labelledby="optionsDD">
-                      <a class="dropdown-item" (click)="openModal(duplicate)"><i
-                          class="fas fa-copy mr-1"></i>Duplicate</a>
-                      <a class="dropdown-item" (click)="openModal(rename)"><i class="fas fa-edit mr-1"></i>Rename</a>
-                      <a class="dropdown-item dd">
-                        <i class="fa fa-download mr-1"></i>Download
-                        <div class="dropdown-menu">
-                          <a class="dropdown-item"><i class="fas fa-file-pdf mr-1"></i>As a single PDF</a>
-                          <a class="dropdown-item"><i class="fas fa-file-alt mr-1"></i>As separate items</a>
-                        </div>
-                      </a>
-                    </div>
                   </div>
                 </div>
               </td>
@@ -173,8 +160,11 @@
   <div class="btn btn-outline-primary border-0 align-self-center">Clear</div>
   <div class="btn btn-light align-self-center ml-auto bg-white" (click)="openLgModal(email)"><i
       class="fa fa-envelope mr-1"></i>Email</div>
-  <div class="btn btn-light align-self-center bg-white" (click)="openModal(getLink)"><i class="fa fa-link mr-1"></i> a
+  <div class="btn btn-light align-self-center bg-white" (click)="openModal(getLink)"><i class="fa fa-link mr-1"></i>Get
+    a
     link</div>
+  <div class="btn btn-light align-self-center bg-white" (click)="openModal(addtoCollection)"><i
+      class="fa fa-folder-plus mr-1"></i>Add to collection</div>
   <div class="btn btn-primary align-self-center"><i class="fas fa-trash-alt mr-1"></i>Delete</div>
 </div>
 
@@ -276,40 +266,130 @@
   </div>
 </ng-template>
 
-<!-- duplicate collection modal -->
-<ng-template #duplicate let-modal>
+<!-- add folder -->
+<ng-template #addFolder let-modal>
   <div class="modal-header">
-    <h4 class="modal-title" id="modal-basic-title">Duplicate Collection</h4>
+    <h4 class="modal-title" id="modal-basic-title">New Folder</h4>
     <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
       <span aria-hidden="true">&times;</span>
     </button>
   </div>
   <div class="modal-body" ngbAutofocus>
     <mat-form-field appearance="outline" class="w-100">
-      <mat-label>Collection Name</mat-label>
-      <input type="text" matInput placeholder="Collection Name">
+      <mat-label>Folder Name</mat-label>
+      <input type="text" matInput placeholder="Folder Name">
     </mat-form-field>
   </div>
   <div class="modal-footer">
-    <button type="button" class="btn btn-primary" (click)="modal.close('Save click')">Save</button>
+    <button type="button" class="btn btn-primary" (click)="modal.close('Save click')">Create</button>
   </div>
 </ng-template>
 
-<!-- rename collection modal -->
-<ng-template #rename let-modal>
+<!-- add url -->
+<ng-template #addURL let-modal>
   <div class="modal-header">
-    <h4 class="modal-title" id="modal-basic-title">Rename Collection</h4>
+    <h4 class="modal-title" id="modal-basic-title">Add URL</h4>
     <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
       <span aria-hidden="true">&times;</span>
     </button>
   </div>
   <div class="modal-body" ngbAutofocus>
     <mat-form-field appearance="outline" class="w-100">
-      <mat-label>Collection Name</mat-label>
-      <input type="text" matInput placeholder="Collection Name">
+      <mat-label>Name</mat-label>
+      <input type="text" matInput placeholder="Eg. Hiforce Homepage">
+    </mat-form-field>
+    <mat-form-field appearance="outline" class="w-100">
+      <mat-label>URL</mat-label>
+      <input type="text" matInput placeholder="Eg. https://www.hiforce.com">
     </mat-form-field>
   </div>
   <div class="modal-footer">
-    <button type="button" class="btn btn-primary" (click)="modal.close('Save click')">Save</button>
+    <button type="button" class="btn btn-primary" (click)="modal.close('Save click')">Add</button>
+  </div>
+</ng-template>
+
+<!-- share with colleagues -->
+<ng-template #shareColl let-modal>
+  <div class="modal-header">
+    <h4 class="modal-title" id="modal-basic-title">Add URL</h4>
+    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body" ngbAutofocus>
+    <div class="file-sharing">
+      File Sharing is ON
+      <mat-slide-toggle class="float-right" #sharingValue></mat-slide-toggle>
+    </div>
+    <div class="rounded border border-primary d-flex text-justify text-primary px-2 my-3 py-2">
+      <i class="fa fa-info-circle align-self-center mr-2"></i>
+      File sharing is enabled for this file. Anyone at Hi-Force Hydraulic Tools with the file link will be able to view
+      this file.
+    </div>
+    <div *ngIf="sharingValue.checked">
+      <mat-label>Share Options:</mat-label>
+      <mat-radio-group aria-label="Select an option" class="d-block">
+        <mat-radio-button value="link" class="mx-3" checked="true" #link>Share by
+          Link
+        </mat-radio-button>
+        <mat-radio-button value="email">Share by Email</mat-radio-button>
+      </mat-radio-group>
+      <hr>
+      <div class="link" *ngIf="link.checked">
+        <mat-form-field appearance="outline" class="w-100 copy-link">
+          <mat-label>Get Link</mat-label>
+          <input type="text" matInput value="https://www.google.com" readonly #linkText>
+          <button matSuffix class="btn btn-primary" (click)="copyLink(linkText)">Copy Link</button>
+        </mat-form-field>
+      </div>
+      <div class="email" *ngIf="!link.checked">
+        <mat-form-field appearance="outline" class="w-100">
+          <mat-label>Email To</mat-label>
+          <input type="text" matInput placeholder="Enter Names or Email Address">
+        </mat-form-field>
+        <mat-form-field appearance="outline" class="w-100">
+          <mat-label>Note</mat-label>
+          <textarea type="text" matInput placeholder="Add a note ..."></textarea>
+        </mat-form-field>
+      </div>
+    </div>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-primary" (click)="modal.close('Save click')"
+      [disabled]="!sharingValue.checked">Share</button>
+  </div>
+</ng-template>
+
+<!-- add to collection -->
+<ng-template #addtoCollection let-modal>
+  <div class="modal-header">
+    <h4 class="modal-title" id="modal-basic-title">Add to Collection</h4>
+    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body" ngbAutofocus>
+    <ul class="list-unstyled">
+      <li (click)="openModal(newCollection)" class="d-flex text-primary px-3 curs-ptr">
+        <div class="icon mr-2"><i class="fas fa-folder-plus" style="font-size:40px;"></i></div>
+        <div class="info align-self-center">Create a new Collection</div>
+      </li>
+      <li class="d-flex border-top px-3 py-2 curs-ptr" *ngFor="let t of testArr">
+        <div class="icon mr-2">
+          <img src="assets/images/discription.png" style="max-height:50px;">
+        </div>
+        <div class="info align-self-center">
+          <div class="name">ABC</div>
+          <div class="text-secondary" style="font-size:12px;">
+            <span class="modified">4 Days ago</span>
+            <span class="mx-2">|</span>
+            <span class="items">1 Item</span>
+          </div>
+        </div>
+      </li>
+    </ul>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-primary" (click)="modal.close('Save click')">Share</button>
   </div>
 </ng-template>
