--- a/src/app/share/share.component.html
+++ b/src/app/share/share.component.html
@@ -4,6 +4,7 @@
     <h3 class="mb-4 clearfix heading align-self-center">
       Shares
       <div class="float-right d-flex">
+        <mat-slide-toggle style="font-size: 14px;" class="mt-2 mr-3">Email notifications</mat-slide-toggle>
         <div class="dropdown">
           <button class="btn btn-primary dropdown-toggle" type="button" id="addBtnDD" data-toggle="dropdown"
             aria-haspopup="true" aria-expanded="false">
@@ -18,7 +19,7 @@
     </h3>
     <div class="row">
       <div class="search col-md-6">
-        <mat-form-field appearance="outline" class="custom-mat-input w-100 mb-2" [floatLabel]="'never'">
+        <mat-form-field appearance="outline" class="custom-mat-input w-100 mb-2 bg-white" [floatLabel]="'never'">
           <i matPrefix class="fas fa-search"></i>
           <input matInput placeholder="Email or Subject or Shared Content">
         </mat-form-field>
@@ -30,7 +31,26 @@
       </div>
     </div>
     <div class="mt-2 row shares">
-
+      <div class="w-75 border rounded mx-auto p-3 bg-white my-2" *ngFor="let t of testArr">
+        <div class="name">Test</div>
+        <div class="text-secondary d-flex justify-content-between" style="font-size:12px;">
+          Shared link from web app
+          <div class="date">15 Oct 2020</div>
+        </div>
+        <div class="border-top border-bottom dark-bg-hover py-2 px-3 mt-3 d-flex justify-content-between"
+          (click)="openLgModal(detail)">
+          <div class="info d-flex">
+            <div class="detail mx-2"><i class="fa fa-link mr-2"></i>Someone</div>
+            <div class="detail mx-2"><i class="fa fa-laptop mr-2"></i>Windows</div>
+          </div>
+          <div class="active-time">Active 15 Oct 2020</div>
+          <div class="options d-flex">
+            <div class="opt mx-2 rounded-circle bg-primary text-white text-center"><i class="fa fa-file"></i></div>
+            <div class="opt mx-2 rounded-circle bg-primary text-white text-center"><i class="fa fa-download"></i>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 
@@ -112,5 +132,137 @@
   </div>
   <div class="modal-footer">
     <button type="button" class="btn btn-primary" (click)="modal.close('Save click')">Save</button>
+  </div>
+</ng-template>
+
+<!-- detail modal -->
+<ng-template #detail let-modal>
+  <div class="modal-header">
+    <h4 class="modal-title" id="modal-basic-title">Test</h4>
+    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body" ngbAutofocus>
+    <div class="heading">
+      <div class="float-right">
+        <div class="dropdown">
+          <button class="btn btn-primary btn-sm" type="button" id="cogDD" data-toggle="dropdown" aria-haspopup="true"
+            aria-expanded="false">
+            <i class="fa fa-cog"></i>
+          </button>
+          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="cogDD">
+            <a class="dropdown-item" href="#">View as recipient</a>
+            <a class="dropdown-item" href="#">Stop all notifications</a>
+            <a class="dropdown-item text-primary" href="#">Revoke access</a>
+          </div>
+        </div>
+      </div>
+      <div class="d-flex">
+        <div class="text-secondary" style="width:100px;">Sent</div>
+        <div>15 Oct 2020 06:35 PM from Web App</div>
+      </div>
+      <div class="d-flex">
+        <div class="text-secondary align-self-center" style="width:100px;">Link</div>
+        <input type="text" value="https://hiforce.com/abc/def/ghi/jkl/mno/pqr/stu/vwx/yz" readonly
+          style="border:0; width:260px;" #link>
+        <div class="btn btn-primary ml-1" (click)=copyLink(link)>Copy Link</div>
+      </div>
+    </div>
+    <div class="main-body border rounded px-3 pt-2 pb-4 mt-3">
+      <div class="d-flex">
+        <div class="mr-3">
+          <i class="fa fa-link mr-1"></i>Someone
+        </div>
+        <div>
+          <i class="fa fa-laptop mr-1"></i>Windows
+        </div>
+      </div>
+      <!-- shaded div -->
+      <div class="d-flex justify-content-around options bg-hi-grey border p-3 rounded my-2">
+        <!-- views -->
+        <div class="d-flex">
+          <div class="opt bg-primary rounded-circle text-center text-white p-1 mr-2">
+            <i class="fa fa-file"></i>
+          </div>
+          <div class="info" style="font-size: 11px;">
+            2 of 12
+            <div class="text-secondary">
+              12 items viewed
+            </div>
+          </div>
+        </div>
+        <!-- downloads -->
+        <div class="d-flex">
+          <div class="opt bg-primary rounded-circle text-center text-white p-1 mr-2">
+            <i class="fa fa-download"></i>
+          </div>
+          <div class="info" style="font-size: 11px;">
+            2
+            <div class="text-secondary">
+              2 downloads
+            </div>
+          </div>
+        </div>
+        <!-- shares -->
+        <div class="d-flex">
+          <div class="opt bg-secondary rounded-circle text-center text-white p-1 mr-2">
+            <i class="fa fa-user-friends"></i>
+          </div>
+          <div class="info" style="font-size: 11px;">
+            0
+            <div class="text-secondary">
+              0 Shares
+            </div>
+          </div>
+        </div>
+      </div>
+      <hr>
+      <!-- activity per item -->
+      <div class="text-secondary font-weight-bold my-2">Activity per item</div>
+      <mat-accordion>
+        <mat-expansion-panel class="my-1" *ngFor="let t of testArr">
+          <mat-expansion-panel-header>
+            <mat-panel-title>
+              <div class="d-flex">
+                <div class="icon mr-2"><img src="assets/images/discription.png" style="max-height:50px;"></div>
+                <div class="name align-self-center">CPB.017.DailyStockUpdate.pdf</div>
+              </div>
+            </mat-panel-title>
+            <mat-panel-description>
+              <div class="d-flex">
+                <div class="views mr-5 align-self-center">
+                  3 views
+                </div>
+                <div class="time ml-5 align-self-center">
+                  43 minute
+                </div>
+              </div>
+            </mat-panel-description>
+          </mat-expansion-panel-header>
+          <div class="my-2 mx-3 py-2 px-3 d-flex justify-content-around border rounded">
+            <div class="num">Page 3</div>
+            <div class="views">3 Views</div>
+            <div class="time">43 Minutes</div>
+          </div>
+        </mat-expansion-panel>
+      </mat-accordion>
+      <hr>
+      <!-- timeline -->
+      <div class="text-secondary font-weight-bold my-2">Timeline</div>
+      <div class="last-date text-secondary mb-2">
+        15 Oct 2020
+      </div>
+      <div class="timeline d-flex" *ngFor="let t of testArr">
+        <div class="step-icon align-self-center mr-2">
+          <div class="h-line"></div>
+          <div class="circle bg-primary rounded-circle"></div>
+        </div>
+        <div class="info align-self-center border-bottom py-1 w-100">
+          <div class="text-secondary" style="font-size: 12px;">October 15th, 06:37 PM</div>
+          Chrome on Windows downloaded abcdefghi.pdf
+        </div>
+      </div>
+    </div>
   </div>
 </ng-template>
