web-app different module, add all webapp routings inside that, new inner pages for collections and experience, move old existing routing and module to web-app

--- a/src/app/errors/500/error-500.component.html
+++ b/src/app/errors/500/error-500.component.html
@@ -2,7 +2,7 @@
   <div class="text-center align-self-center" fxLayout="column" fxLayoutAlign="center center">
     <div class="img"><img src="assets/images/err.png"></div>
     <div class="err-code mt-5">5 <i class="far fa-frown" aria-hidden="true"></i> 0</div>
-    <div class="msg mt-3">Sorry but we could not find the page you are looking for</div>
+    <div class="msg mt-3">It looks like we have an internal issue, please try again after sometime.</div>
     <a class="back-link mt-3" [routerLink]="'/'">Go back to Home</a>
   </div>
 </div>
